--- a/libraryapi/src/main/resources/application.yaml
+++ b/libraryapi/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ spring:
     password: postgres
     driver-class-name: org.postgresql.Driver
   jpa:
+    show-sql: true
     hibernate:
       ddl-auto: update
-    show-sql: true
+    properties:
+      hibernate.format_sql: true
